// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginNGRXViewComponent is logged out 1`] = `
<tmp-login-ngrx-view
  buttonEmitter={[Function EventEmitter]}
  isLoggedIn="false"
>
  <div>
    <button>
      Login
    </button>
  </div><div>
    <button>
      Logout
    </button>
  </div><div>
    
    <br />
    
    <span>
      User is NOT logged in
    </span>
  </div>
</tmp-login-ngrx-view>
`;

exports[`LoginNGRXViewComponent is loggedn in 1`] = `
<tmp-login-ngrx-view
  buttonEmitter={[Function EventEmitter]}
  isLoggedIn={[Function Boolean]}
>
  <div>
    <button>
      Login
    </button>
  </div><div>
    <button>
      Logout
    </button>
  </div><div>
    
    <span>
      User is logged in
    </span>
    <br />
    
  </div>
</tmp-login-ngrx-view>
`;
